public/css/style.css
body, #cvuhsd-portal-app {
    transition: all 700ms ease-in-out !important;
    font-family: 'Source Sans Pro', sans-serif;

    overflow-y: auto;
    
}

/* html {
    width: 100%;
    height: 100%;
    display: block;
    table; 
} */

body {
    width: 100%;
    display: block;
    /* table-cell; */

    transition: 300ms filter linear;
}

html, body {
    margin: 0px;
    padding: 0px;
}

body {
    filter: blur(0px);
    transition: 700ms filter linear;
}

iframe {
    display: block;  
    width: 25%;
    height: 100%;
}

/* === TRANSFER TO IT MODAL === */

body.support-request-modal-body--open #cvuhsd-sso-portal > :not(.support-request-modal):not(.Toastify):not(.Toastify__toast-container):not(.Toastify__toast),
body.change-password-modal-body--open #cvuhsd-sso-portal > :not(.change-password-modal):not(.Toastify):not(.Toastify__toast-container):not(.Toastify__toast) {
    filter: blur(3px);
}


/* body.ReactModal__Body--open > div.transfer-to-it-modal {
    filter: blur(0px);
}  */

/* Prevent there from being a scroll to the Transfer to IT Modal */
.ReactModal__Html--open,
.ReactModal__Body--open,
.support-request-modal-body--open
{
    overflow: hidden;
}

.ReactModal__Overlay {
    opacity: 0;
    transition: opacity 300ms ease-in-out;
}

.ReactModal__Overlay--after-open{
    opacity: 1;

}

.ReactModal__Overlay--before-close{
    opacity: 0;
}

/* React Modal Content Animation */
.ReactModal__Content {
    transform: scale(0) translate(-50%, -50%);
    transform-origin: 0% 25%;

    max-height: 0px;
    max-width: 0px;

    transition: transform 300ms ease-in-out, max-width 300ms ease-in-out, max-height 300ms ease-in-out;

}

.ReactModal__Content--after-open {
    transform: scale(1);
    transform-origin: 0% 25%;

    max-height: 900px;
    max-width: 900px;
}

.ReactModal__Content--before-close {
    transform: scale(0);
    transform-origin: 0% 25%;

    max-height: 0px;
    max-width: 0px;
}


/* Prevent Buttons from having an outlined when clicked or focused */
html > * button:focus {
    outline: 0px;
}

/* Manage Engine Chat  */
body > div#external_sdp_chat {
    background: rgb(51, 51, 51) none repeat scroll 0% 0%;
    border-radius: 4px;
    bottom: 0px;
    color: white;
    cursor: pointer;
    position: sticky !important;
    left: 99% !important;
    z-index: 2;
    height: 29px;
    width: 100px; 
}

body > div#me_sdp_chat_content_div {
    bottom: 0px;
    position: sticky ! important;
    left: 99% !important;
    width: 360px !important;
    min-width: 360px;
    height: auto;
    line-height: 40px;
    box-shadow: rgb(119, 119, 119) 0px 1px 8px;
    border-top-left-radius: 5px;
    border-top-right-radius: 5px;
    overflow: hidden;
}

